Version 2.02.48 - 
===============================
  Use 'lvm lvresize' instead of 'lvresize' in fsadm.
  Do not use '-n' realine option in fsadm for busybox compatiblity.
  Update vgrename, vgsplit, and vgcreate to use vg_lock_newname.
  Add vg_lock_newname() library function.
  Round up requested readahead to at least one page and print warning.
  Try to repair vg before actual vgremove when force flag provided.
  Fix possible double release of VG after recovery.
  Add parameter to process_each_vg specifying what to do with inconsistent VG.
  Unify error messages when procesing inconsistent volume group.
  Use lvconvert --repair instead of vgreduce in mirror dmeventd DSO.
  Introduce lvconvert --use_policies (repair policy according to lvm.conf).
  Fix clvmd-corosync to match new corosync API.
  Fix makefile to build also shared libraries when running plain make.
  Fix rename of active snapshot with virtual origin.
  Fix convert polling to ignore LV with different UUID.
  Cache underlying device readahead only before activation calls.
  Fix segfault when calculating readahead on missing device in vgreduce.
  Remove verbose 'visited' messages.
  Handle multi-extent mirror log allocation when smallest PV has only 1 extent.
  Add LSB standard headers and functions (incl. reload) to clvmd initscript.
  When creating new LV, double-check that name is not already in use.
  Remove /dev/vgname/lvname symlink automatically if LV is no longer visible.
  Rename internal vorigin LV to match visible LV.
  Suppress 'removed' messages displayed when internal LVs are removed.
  Fix lvchange -a and -p for sparse LVs.
  Fix lvcreate --virtualsize to activate the new device immediately.
  Make --snapshot optional with lvcreate --virtualsize.
  Generalise --virtualoriginsize to --virtualsize.
  Skip virtual origins in process_each_lv_in_vg() without --all.
  Fix counting of virtual origin LVs in vg_validate.
  Attempt to load dm-zero module if zero target needed but not present.
